# weighted_multi_projection

./: CMakeLists.txt  test.cpp
cfg/: recognition_parameter.toml
include/: header.h  utils.hpp
src/: main.cpp
